# lob

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
config/: instruments.yaml
deploy/: host.env.example
docs/: linux-deployment.md  project-plan.md  verification.md
fixtures/: events.jsonl
migrations/: 001_init.sql  002_audit_metrics.sql  003_process_resources.sql
queries/: duckdb_parquet.sql  events_by_symbol.sql
reports/: pilot-template.md
scripts/: acceptance-check  audit-sensitive  container-entrypoint  database-outage-drill  docker-boot-readiness-check  host-prepare  host-reboot-check  network-outage-drill  privacy-list  privacy-purge  storage-check  storage-identity-check  storage-init
secrets/: shioaji.env.example
src/lob_recorder/: __init__.py  acceptance.py  cli.py  collector.py  config.py  credentials.py  exporter.py  models.py  outage.py  pilot.py  privacy.py  privacy_tools.py  quality.py  reboot.py  sinks.py  spool.py  storage.py
src/lob_recorder/sources/: __init__.py  fixture.py  shioaji_source.py
tests/: test_acceptance.py  test_acceptance_wrapper.py  test_collector.py  test_config.py  test_docker_boot_readiness_wrapper.py  test_exporter.py  test_models.py  test_network_outage.py  test_network_outage_wrapper.py  test_outage.py  test_outage_wrapper.py  test_pilot.py  test_privacy.py  test_quality.py  test_reboot.py  test_reboot_wrapper.py  test_shioaji_source.py  test_sinks.py  test_spool.py  test_storage.py  test_storage_identity_wrapper.py
